[package]
name = "systools"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
sysinfo = "0.29"
clap = { version = "4.4.6", features = ["derive"] }
prettytable-rs = "^0.10"
futures = "^0.3"
